--- a/.github/workflows/assing6.yml
+++ b/.github/workflows/assing6.yml
@@ -33,35 +33,46 @@ jobs:
           # Get the last assigned reviewer
           LAST_REVIEWER="${{ steps.get_last_reviewer.outputs.LAST_REVIEWER }}"
           
+          echo "Reviewers: ${REVIEWERS[*]}"
+          echo "PR Author: $PR_AUTHOR"
+          echo "Last Reviewer: $LAST_REVIEWER"
+          
           # Find the next eligible reviewer
           NEXT_REVIEWER=""
           if [[ -z "$LAST_REVIEWER" ]]; then
-            # If LAST_ASSIGNED_REVIEWER is empty, start from the beginning of the list
+            echo "LAST_ASSIGNED_REVIEWER is empty, starting from the beginning"
             for reviewer in "${REVIEWERS[@]}"; do
+              echo "Checking reviewer: $reviewer"
               if [[ "$reviewer" != "$PR_AUTHOR" ]]; then
                 NEXT_REVIEWER="$reviewer"
+                echo "Selected first eligible reviewer: $NEXT_REVIEWER"
                 break
+              else
+                echo "Skipping $reviewer as they are the PR author"
               fi
             done
           else
-            # Find the next eligible reviewer after the last assigned one
+            echo "Finding next reviewer after $LAST_REVIEWER"
             for i in "${!REVIEWERS[@]}"; do
               if [[ "${REVIEWERS[$i]}" == "$LAST_REVIEWER" ]]; then
-                # Start looking for the next reviewer from here
                 for j in $(seq $(( (i+1) % ${#REVIEWERS[@]} )) $((${#REVIEWERS[@]}-1)) 0 $i); do
+                  echo "Checking reviewer: ${REVIEWERS[$j]}"
                   if [[ "${REVIEWERS[$j]}" != "$PR_AUTHOR" ]]; then
                     NEXT_REVIEWER="${REVIEWERS[$j]}"
+                    echo "Selected next eligible reviewer: $NEXT_REVIEWER"
                     break 2
+                  else
+                    echo "Skipping ${REVIEWERS[$j]} as they are the PR author"
                   fi
                 done
               fi
             done
           fi
           
-          # If still no reviewer found, exit
+          # If still no reviewer found, assign the first reviewer from the list
           if [[ -z "$NEXT_REVIEWER" ]]; then
-            echo "Error: No eligible reviewer found."
-            exit 1
+            NEXT_REVIEWER="${REVIEWERS[0]}"
+            echo "No eligible reviewer found. Defaulting to the first reviewer: $NEXT_REVIEWER"
           fi
           
           # Get the current PR number
